@@ -1660,7 +1660,7 @@ macro contiguousPutByVal(storeCallback)
     jmp .storeResult
 end
 
-macro putByVal(holeCheck, slowPath)
+macro putByVal(slowPath)
     traceExecution()
     writeBarrierOnOperands(1, 3)
     loadi 4[PC], t0
@@ -1711,7 +1711,7 @@ macro putByVal(holeCheck, slowPath)
 .opPutByValNotContiguous:
     bineq t2, ArrayStorageShape, .opPutByValSlow
     biaeq t3, -sizeof IndexingHeader + IndexingHeader::u.lengths.vectorLength[t0], .opPutByValOutOfBounds
-    holeCheck(ArrayStorage::m_vector + TagOffset[t0, t3, 8], .opPutByValArrayStorageEmpty)
+    bieq ArrayStorage::m_vector + TagOffset[t0, t3, 8], EmptyValueTag, .opPutByValArrayStorageEmpty
 .opPutByValArrayStorageStoreResult:
     loadi 12[PC], t2
     loadConstantOrVariable2Reg(t2, t1, t2)
@@ -1737,13 +1737,10 @@ macro putByVal(holeCheck, slowPath)
 end
 
 _llint_op_put_by_val:
-    putByVal(macro(addr, slowPath)
-        bieq addr, EmptyValueTag, slowPath
-    end, _llint_slow_path_put_by_val)
+    putByVal(_llint_slow_path_put_by_val)
 
 _llint_op_put_by_val_direct:
-    putByVal(macro(addr, slowPath)
-    end, _llint_slow_path_put_by_val_direct)
+    putByVal(_llint_slow_path_put_by_val_direct)
 
 _llint_op_jmp:
     traceExecution()
